--- a/src/index.jade
+++ b/src/index.jade
@@ -154,6 +154,55 @@ html(lang='en')
 								.image-holder
 									img(src="img/content/category-icon-5.png", alt="image")
 
+		section.subcategories-slider
+			.container
+				.subcategories-slider-content
+					.next-slide
+					.prev-slide
+					ul.subcategories-line
+						li(href="#" data-category="category-1").active
+							span Регистрация
+						li(href="#" data-category="category-2")
+							span Изменения
+						li(href="#" data-category="category-3")
+							span Ликвидация
+						li(href="#" data-category="category-4")
+							span Сопутствующие и доп.
+					ul.subcontents-container
+						li#subcategory-1.slide.active
+							.image-holder
+								img(src="img/content/slide-3.png", alt="")
+							.content-holder
+								h3 Смена руководителя компании
+								p Термин «промышленная собственность» впервые начал применяться во французском законодательстве как вид собственности на изобретение и товарный знак. Промышленная собственность в настоящем контексте понимается как результат интеллектуального труда, являющегося порождением разума.
+								p В соответствии со ст. 1 Парижской конвенции по охране промышленной собственности к объектам промышленной собственности относятся изобретения во всех сферах человеческой деятельности, промышленные образцы, товарные знаки, знаки обслуживания, фирменные наименования, наименования места происхождения товара, а также пресечение недобросовестной конкуренции.
+								p Наиболее важной с точки зрения экономики и права и получившей распространение в мире является патентная форма охраны объектов промышленной собственности.
+								p Патент – это выдаваемый патентным органом от имени государства документ, который удостоверяет авторство, приоритет на объект промышленной собственности и исключительное право на его использование.
+								p Читать подробно: 
+									a(href="http://justicon.ua/uslugi/int/patent/#ixzz4LDVZpiog") http://justicon.ua/uslugi/int/patent/#ixzz4LDVZpiog
+						li#subcategory-2.slide
+							.image-holder
+								img(src="img/content/category-icon-2.png", alt="")
+							.content-holder
+								h3 Смена руководителя компании
+								p Термин «промышленная собственность» впервые начал применяться во французском законодательстве как вид собственности на изобретение и товарный знак. Промышленная собственность в настоящем контексте понимается как результат интеллектуального труда, являющегося порождением разума.
+								p В соответствии со ст. 1 Парижской конвенции по охране промышленной собственности к объектам промышленной собственности относятся изобретения во всех сферах человеческой деятельности, промышленные образцы, товарные знаки, знаки обслуживания, фирменные наименования, наименования места происхождения товара, а также пресечение недобросовестной конкуренции.
+								p Наиболее важной с точки зрения экономики и права и получившей распространение в мире является патентная форма охраны объектов промышленной собственности.
+								p Патент – это выдаваемый патентным органом от имени государства документ, который удостоверяет авторство, приоритет на объект промышленной собственности и исключительное право на его использование.
+								p Читать подробно: 
+									a(href="http://justicon.ua/uslugi/int/patent/#ixzz4LDVZpiog") http://justicon.ua/uslugi/int/patent/#ixzz4LDVZpiog
+						li#subcategory-3.slide
+							.image-holder
+								img(src="img/content/slide-1.png", alt="")
+							.content-holder
+								h3 Смена руководителя компании
+								p Термин «промышленная собственность» впервые начал применяться во французском законодательстве как вид собственности на изобретение и товарный знак. Промышленная собственность в настоящем контексте понимается как результат интеллектуального труда, являющегося порождением разума.
+								p В соответствии со ст. 1 Парижской конвенции по охране промышленной собственности к объектам промышленной собственности относятся изобретения во всех сферах человеческой деятельности, промышленные образцы, товарные знаки, знаки обслуживания, фирменные наименования, наименования места происхождения товара, а также пресечение недобросовестной конкуренции.
+								p Наиболее важной с точки зрения экономики и права и получившей распространение в мире является патентная форма охраны объектов промышленной собственности.
+								p Патент – это выдаваемый патентным органом от имени государства документ, который удостоверяет авторство, приоритет на объект промышленной собственности и исключительное право на его использование.
+								p Читать подробно: 
+									a(href="http://justicon.ua/uslugi/int/patent/#ixzz4LDVZpiog") http://justicon.ua/uslugi/int/patent/#ixzz4LDVZpiog
+
 		section.search-section
 			.container
 				form(action="#").search-wrapper
