--- a/src/partials/modals.jade
+++ b/src/partials/modals.jade
@@ -89,24 +89,12 @@
 					tr
 						td
 							.title Секретарь / факс
-							.blackphone.fl
-							.t +38 (044) 221-4000
-							.clear
-							p
-							.life.fl
-							.t
-								| +38 (093) 1000 176 
-								img(src='/upload/medialibrary/c23/images.png', title='images.png', border='0', align='top', alt='images.png', width='20', height='20')
-							.clear
-							.kyivstar.fl
-							.t +38 (098) 1000 176
-							.clear
-							p  
-							.skype.fl
-							.t Skype: justicon.ua
-							.clear
-							p  
-							div
+							ul
+								li +38 (044) 221-4000
+								li +38 (093) 1000 176 
+								li +38 (098) 1000 176
+								li Skype: justicon.ua
+							div.hidden
 								span.blue
 									a.calll.r-pimp Заказать обратный звонок
 								br
@@ -123,6 +111,15 @@
 						td
 							iframe(src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1270.402466134344!2d30.49094600000001!3d50.44473399999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce8cba3de9b3%3A0x2a7848a37fee7707!2z0K7RgdGC0LjQutC-0L0uINCu0YDQuNC00LjRh9C10YHQutCw0Y8g0YHRgtC-0YDQvtC90LAg0LHQuNC30L3QtdGB0LAu!5e0!3m2!1suk!2sua!4v1411805101313', width='600', height='450', frameborder='0', style='border: 0px;')
 
+	.close.button
+
+#search-modal.modal
+	.modal-wrapper
+		form(action="#").search-wrapper
+			h2 Некогда разбираться? Мы поможем.
+			.input-form
+				input(type="text" placeholder="Введите основные ключевые слова вашего вопроса")
+			button(type="submit") Найти решение
 	.close.button
 
 #mobile-menu.mobile-menu.modal
