open graph info added

--- a/src/partials/head.jade
+++ b/src/partials/head.jade
@@ -9,6 +9,16 @@ link(rel="manifest", href="img/icons/favicons/manifest.json")
 link(rel="mask-icon", href="img/icons/favicons/safari-pinned-tab.svg", color="#5bbad5")
 meta(name="theme-color", content="#ffffff")
 
+// open graph
+meta(property="og:type" content="website")
+meta(property="og:title" content="Юстикон - юридическая компания")
+meta(property="og:description" content="Термин «промышленная собственность» впервые начал применяться во французском законодательстве как вид собственности на изобретение и товарный знак. Промышленная собственность в настоящем контексте понимается как результат интеллектуального труда, являющегося порождением разума.")
+meta(property="og:image" content="http://pogorelov.cc.ua/justicon/img/content/law-lady.png")
+meta(property="og:url" content="http://pogorelov.cc.ua/justicon/index.html")
+meta(name="twitter:image" content="http://pogorelov.cc.ua/justicon/img/content/law-lady.png")
+meta(name="twitter:title" content="Юстикон - юридическая компания")
+meta(name="twitter:card" content="summary")
+meta(name="twitter:description" content="Термин «промышленная собственность» впервые начал применяться во французском законодательстве как вид собственности на изобретение и товарный знак. Промышленная собственность в настоящем контексте понимается как результат интеллектуального труда, являющегося порождением разума.")
 
 //- link(rel='stylesheet', href='vendor/bootstrap/dist/css/bootstrap.min.css')
 link(rel='stylesheet', href='vendor/normalize-css/normalize.css')
