main slider subslides

--- a/src/css/global.sass
+++ b/src/css/global.sass
@@ -25,6 +25,7 @@ li
 		background: #fff
 		position: absolute
 		padding: 10px
+		pointer-events: none
 		z-index: 1
 		visibility: hidden
 		opacity: 0
@@ -34,6 +35,7 @@ li
 		.submenu
 			display: block
 			transform: translateY(0)
+			pointer-events: all
 			visibility: visible
 			opacity: 1
 
