--- a/src/css/modals.sass
+++ b/src/css/modals.sass
@@ -47,6 +47,16 @@
 		.modal-wrapper
 			animation: modalClose 0.6s
 			animation-fill-mode: forwards
+	.close
+		cursor: pointer
+		height: 20px
+		width: 20px
+		background: transparent url('../img/icons/cross-button-4.svg') 50% 50% no-repeat
+		background-size: contain
+		pointer-events: none
+		position: absolute
+		right: 20px
+		top: 20px
 
 .mobile-menu
 	background-color: #4c5155
