--- a/src/index.jade
+++ b/src/index.jade
@@ -63,10 +63,10 @@ html(lang='en')
 								li
 									span Абонентское обслуживание
 					ul.contents-container
-						li#category-1.slide
+						li#category-1.slide.active
 							.left-col
 
-								.subslide
+								.subslide.active
 									.slide-description
 										h2 Судебная практика
 										p Описание услуги в нескольких словах. Это должен быть продающий текст.
