--- a/src/partials/navigation.jade
+++ b/src/partials/navigation.jade
@@ -61,6 +61,8 @@
 				a(href='#' data-modal="#search-modal")
 					span
 						img(src="img/icons/search-icon-2.svg", alt="search")
+				.submenu
+					span Поиск по сайту
 			li.lang-switcher
 				a(href='#')
 					span Укр
@@ -72,7 +74,7 @@
 							a(href='#') En
 
 		.header-contacts-navigation-holder
-			ul.header-contacts-holder
+			.header-contacts-holder
 				ul
 					li.operator.operator-lifecell
 						a(href="tel:0981000176" data-modal="#contacts-modal") (098) 1000 176
@@ -80,6 +82,8 @@
 						a(href="tel:0931000176" data-modal="#contacts-modal") (093) 1000 176
 					li.operator.operator-kyivstar
 						a(href="tel:0442214000" data-modal="#contacts-modal") (044) 221 4000
+				.submenu
+					span Показать еще
 
 	.navigation-bar.hidden
 		.container
