--- a/src/css/modals.sass
+++ b/src/css/modals.sass
@@ -250,6 +250,7 @@
 	background-color: rgba(255,255,255,.8)
 	.container
 		background: #fff
+		box-shadow: 0 2px 23px rgba(0, 0, 0, 0.1)
 		position: absolute
 		padding: 80px 80px
 		left: 50%
