modals and main page

--- a/src/css/elements.sass
+++ b/src/css/elements.sass
@@ -57,6 +57,10 @@
 		@media (max-width: $tablet)
 			font-size: 22px
 
+.tag-cloud-1
+	li
+		background: rgba(255,255,255,0.5)
+
 // SIDEBAR NAVIGATION
 // .navigation-sidebar .nav.nav-sidebar .submenu .inner-holder > li
 .navigation-sidebar
